<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contact_details_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_details_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/static_text_mobile"
                android:textColor="@color/textSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contact_details_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/placeholder_text_phone_number"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_size_sub_heading" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/contact_details_call"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_call"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/ic_call_black_24dp" />

        <ImageButton
            android:id="@+id/contact_details_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_message"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/ic_message_black_24dp" />

        <ImageButton
            android:id="@+id/contact_details_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_message"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/ic_email_black_24dp"
            android:visibility="gone" />

    </LinearLayout>

</android.support.v7.widget.CardView>