<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_contact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_card_bottom"
    android:layout_marginEnd="@dimen/margin_main_right"
    android:layout_marginLeft="@dimen/margin_main_left"
    android:layout_marginRight="@dimen/margin_main_right"
    android:layout_marginStart="@dimen/margin_main_left"
    android:layout_marginTop="@dimen/margin_card_top"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_contact_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:transitionName="contact_card"
            app:cardCornerRadius="60dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/card_contact_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/placeholder_content_description_family_image"
                android:scaleType="centerCrop"
                android:src="@drawable/family"
                android:transitionName="contact_image" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/card_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_name"
                android:textColor="@color/textPrimary"
                android:textSize="20sp"
                android:transitionName="contact_name" />

            <TextView
                android:id="@+id/card_contact_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/placeholder_address"
                android:textColor="@color/textSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/card_contact_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_phone"
                android:textColor="@color/textSecondary"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>