<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/AppTheme.Dark"
    tools:context="mscc.net.churchdirectory.LoginActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="@drawable/backgroundbottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout
                android:id="@+id/main_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="exitUntilCollapsed|scroll">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/home_image_cardinals"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:contentDescription="@string/static_text_cardinals"
                        android:scaleType="centerCrop"
                        android:background="@drawable/gradient1"
                        app:layout_collapseMode="parallax" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/static_text_cardinals"
                        android:scaleType="centerCrop"
                        android:src="@drawable/backagroundtop"
                        app:layout_collapseMode="none" />

                </RelativeLayout>

                <include
                    layout="@layout/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />


            </net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="SYRO MALANKARA CATHOLIC MAJOR ARCHIEPISCOPAL CHURCH"
                            android:textAlignment="center"
                            android:textColor="@color/textPrimary"
                            android:textSize="@dimen/text_size_heading" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="St. Michael's Catholic Church, Sharjah, UAE"
                            android:textAlignment="center"
                            android:textColor="@color/textPrimary"
                            android:textSize="@dimen/text_size_sub_heading" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/banner" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="120dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/email_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="50dp"
                        android:paddingLeft="50dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                            android:id="@+id/loginToggleSwitch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:checkedBackgroundColor="#FA19A3"
                            app:checkedTextColor="#FFFFFF"
                            app:uncheckedBackgroundColor="#FFFFFF"
                            app:uncheckedTextColor="#FA19A3"
                            app:textToggleLeft="Member"
                            app:textToggleRight="Guest" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:textColorHint="#FFFFFF">

                            <AutoCompleteTextView
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/white"
                                android:fontFamily="sans-serif"
                                android:hint="@string/placeholder_text_username"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/white" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColorHint="@color/white"
                            android:theme="@style/AppTheme.Light">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/white"
                                android:fontFamily="sans-serif"
                                android:hint="@string/prompt_password"
                                android:imeActionId="6"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/white" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/email_sign_in_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/custom_button"
                            android:text="@string/action_sign_in_short"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/passwordResetButton"
                            style="?android:textAppearanceSmall"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_height="25dp"
                            android:layout_marginTop="15dp"
                            android:background="?attr/selectableItemBackground"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:text="Forgot/ Reset Password?"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="OR"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="15dp"
                            android:layout_marginTop="40dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:weightSum="3">


                            <Button
                                android:id="@+id/email_register_button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="?attr/selectableItemBackground"
                                android:foreground="?attr/selectableItemBackgroundBorderless"
                                android:text="REGISTER"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />


                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
